# nanochat-openmythos

./: .gitignore  NOTICE.md  README.md  pyproject.toml
nanochat/: common.py  engine.py  gpt.py  openmythos.py  optim.py
tests/: test_looped_transformer.py  test_mla_dsa_attention.py
